@@ -3150,8 +3150,8 @@ class LMS
 					$this->DB->Execute('UPDATE dbinfo SET keyvalue=?NOW? WHERE keytype=?', array('last_check_for_updates_timestamp'));
 			}
 
-			$content = unserialize($content);
-			$content['regdata'] = unserialize($content['regdata']);
+			$content = unserialize((string)$content);
+			$content['regdata'] = unserialize((string)$content['regdata']);
 			
 			$this->DB->Execute('DELETE FROM dbinfo WHERE keytype LIKE ?', array('regdata_%'));
 			
